--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 11</title>
+    <link rel="stylesheet" href="./sass/index.scss">
   </head>
   <body>
     <form class="search-form" id="search-form">
@@ -13,7 +14,9 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button type="submit" class="search-button">
+        <img src="./images/magnifying-glass.png" alt="" width="10px">
+        </button>
     </form>
 
     <div class="gallery">
@@ -36,7 +39,7 @@
 </div> -->
     </div>
 
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more ">Load more...</button>
 
     <script src="index.js" type="module"></script> 
   </body>
