Creates gallery markup

--- a/src/index.html
+++ b/src/index.html
@@ -20,23 +20,25 @@
     </form>
 
     <div class="gallery">
-      <!-- <div class="photo-card">
-  <img src="" alt="" loading="lazy" />
+      <div class="photo-card">
+  <img src="./images/magnifying-glass.png" alt="" loading="lazy" width="100px"/>
   <div class="info">
-    <p class="info-item">
-      <b>Likes</b>
+    <p class="info-item" data="likes">
+      <b>Likes</b> 1258
     </p>
-    <p class="info-item">
+    <p class="info-item" data="views">
       <b>Views</b>
     </p>
-    <p class="info-item">
+    <p class="info-item" data="comments">
       <b>Comments</b>
     </p>
-    <p class="info-item">
+    <p class="info-item" data="downloads">
       <b>Downloads</b>
     </p>
   </div>
-</div> -->
+</div>
+
+
     </div>
 
     <button type="button" class="load-more ">Load more...</button>
