--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,6 @@
 
     <button type="button" class="load-more ">Load more...</button>
 
-    <script src="index.js" type="module"></script> 
+    <!-- <script src="index.js" type="module"></script>  -->
   </body>
 </html>
