RenderHTML is done

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     </form>
 
     <div class="gallery">
-      <div class="photo-card">
+      <!-- <div class="photo-card">
   <img src="./images/magnifying-glass.png" alt="" loading="lazy" width="100px"/>
   <div class="info">
     <p class="info-item" data="likes">
@@ -36,13 +36,13 @@
       <b>Downloads</b>
     </p>
   </div>
-</div>
+</div> -->
 
 
     </div>
 
     <button type="button" class="load-more ">Load more...</button>
 
-    <!-- <script src="index.js" type="module"></script>  -->
+    <script src="index.js" type="module"></script> 
   </body>
 </html>
