--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
     <button type="button" class="load-more hidden">Load more...</button>
 
-    <!-- <script src="index.js" type="module"></script>  -->
-    <script src="old_index.js" type="module"></script>
+    <script src="index.js" type="module"></script> 
+    <!-- <script src="old_index.js" type="module"></script> -->
   </body>
 </html>
